--- a/setup.cfg
+++ b/setup.cfg
@@ -17,7 +17,9 @@ exclude =
 	.nox,
 	venv,
 	__pycache__
-
+ignore =
+  I201
+  W503 # not yet up to date with https://www.flake8rules.com/rules/W503.html
 
 [sqlfluff]
 dialect = bigquery
